--- a/photographer_page_template.html
+++ b/photographer_page_template.html
@@ -4,26 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/4ff3d07870.js" crossorigin="anonymous"></script>
+    <script src="app-photographe.js" defer></script>
     <title>Possible d'adapter au contenu, selon js?</title>
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="UI-Design-FishEye-FR/.logo.png" alt="FishEye Home page"></a>
+        <div class="banner banner-photographe" role="banner">
+            <a href="index.html" class="logo-link" role="img link"><img src=".logo.png" alt="FishEye Home page" aria-label="logo Fisheye"></a>
+        </div>
     </header>
 
     <main>
-        <section class="photographer-presentation">
-            <div class="photographer-info">
-                <h1 class="name"></h1>
-                <span class="loc-and-line">
-                    <p class="location"></p>
-                    <p class="tagline"></p>
-                </span>
-                <div class="tags"></div>
-            </div>
-            <button class="open-modal-contact"></button>
-            <p><img src="" alt="" class="portrait"></p>
-        </section>
+        
     </main>
     
 </body>
