page photographe : profile, modale contact, grid des photos

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <main id="retour-contenu">
         <section class="photographes">
-            <h1 role="heading">Nos photographes</h1>
+            <h1 role="heading" class="photographes-titre">Nos photographes</h1>
         </section>
     </main>
 </body>
