liens entre index et pages + menu de tri photos

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <div class="banner" role="banner">
             <a href="index.html" class="logo-link" role="img link"><img src=".logo.png" alt="FishEye Home page" aria-label="logo Fisheye"></a>
             <nav role="navigation">
-                <button class="tag tag-btn" role="link" aria-label="selectionner photographes spécialisés en" onclick="filterSelection('portrait')">#Portrait</button>
-                <button class="tag tag-btn" role="link" aria-label="selectionner photographes spécialisés en" onclick="filterSelection('art')">#Art</button>
-                <button class="tag tag-btn" role="link" aria-label="selectionner photographes spécialisés en" onclick="filterSelection('fashion')">#Fashion</button>
-                <button class="tag tag-btn" role="link" aria-label="selectionner photographes spécialisés en" onclick="filterSelection('architecture')">#Architecture</button>
-                <button class="tag tag-btn" role="link" aria-label="selectionner photographes spécialisés en" onclick="filterSelection('travel')">#Travel</button>
-                <button class="tag tag-btn" role="link" aria-label="selectionner photographes spécialisés en" onclick="filterSelection('sport')">#Sport</button>
-                <button class="tag tag-btn" role="link" aria-label="selectionner photographes spécialisés en" onclick="filterSelection('animals')">#Animals</button>
-                <button class="tag tag-btn" role="link" aria-label="selectionner photographes spécialisés en" onclick="filterSelection('events')">#Events</button>
+                <button class="tag tag-btn" role="link" aria-label="filtre" onclick="filterSelection('portrait')"><span class="sr-only">tag</span>#Portrait</button>
+                <button class="tag tag-btn" role="link" aria-label="filtre" onclick="filterSelection('art')"><span class="sr-only">tag</span>#Art</button>
+                <button class="tag tag-btn" role="link" aria-label="filtre" onclick="filterSelection('fashion')"><span class="sr-only">tag</span>#Fashion</button>
+                <button class="tag tag-btn" role="link" aria-label="filtre" onclick="filterSelection('architecture')"><span class="sr-only">tag</span>#Architecture</button>
+                <button class="tag tag-btn" role="link" aria-label="filtre" onclick="filterSelection('travel')"><span class="sr-only">tag</span>#Travel</button>
+                <button class="tag tag-btn" role="link" aria-label="filtre" onclick="filterSelection('sport')"><span class="sr-only">tag</span>#Sport</button>
+                <button class="tag tag-btn" role="link" aria-label="filtre" onclick="filterSelection('animals')"><span class="sr-only">tag</span>#Animals</button>
+                <button class="tag tag-btn" role="link" aria-label="filtre" onclick="filterSelection('events')"><span class="sr-only">tag</span>#Events</button>
             </nav>
             <div class="empty"></div>
         </div>
@@ -30,6 +30,7 @@
     <main id="retour-contenu">
         <section class="photographes">
             <h1 role="heading" class="photographes-titre">Nos photographes</h1>
+            <ul class="index"></ul>
         </section>
     </main>
 </body>
