ajout likes au click, ajouts titres dans json

--- a/photographer_profile.html
+++ b/photographer_profile.html
@@ -64,6 +64,11 @@
                 </div>
             </div>
         </section>
+
+        <div class="profile-info-bottom" role="text">
+            <p><span id="total-likes"></span> <i class="fas fa-heart"></i> </p>
+            <p><span id="price-bottom"></span>€/jour</p>
+        </div>
     </main>
     
 </body>
