correction nom fichier logo, affichage

--- a/photographer_profile.html
+++ b/photographer_profile.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="banner banner-photographe">
-            <a href="index.html" class="logo-link" role="link"><img src=".logo.png" alt="FishEye Home page"></a>
+            <a href="index.html" class="logo-link" role="link"><img src="logo.png" alt="FishEye Home page"></a>
         </div>
     </header>
 
