ajout span likes, correction listbox display

--- a/photographer_profile.html
+++ b/photographer_profile.html
@@ -74,7 +74,7 @@
         </section>
 
         <div class="profile-info-bottom" role="text">
-            <p><span id="total-likes"></span> <em class="fas fa-heart"></em> </p>
+            <p><span id="total-likes"></span><em class="fas fa-heart"></em><span class="sr-only">likes</span></p>
             <p><span id="price-bottom"></span>€/jour</p>
         </div>
     </main>
