--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="appear-when-scroll" role="link" aria-label="revenir en haut de page"><a href="#retour-contenu" class="appear-when-scroll-link">Passer au contenu</a></div>
     <header>
         <div class="banner" role="banner">
-            <a href="index.html" class="logo-link" role="img link"><img src="logo.png" alt="FishEye Home page" aria-label="logo Fisheye"></a>
+            <a href="index.html" class="logo-link" role="link"><img src="logo.png" alt="FishEye Home page" aria-label="Fisheye Home page"></a>
             <nav role="navigation">
                 <button class="tag tag-btn" aria-label="filtre portrait" onclick="filterSelection('portrait')"><span class="sr-only">tag</span>#Portrait</button>
                 <button class="tag tag-btn" aria-label="filtre art" onclick="filterSelection('art')"><span class="sr-only">tag</span>#Art</button>
@@ -29,7 +29,7 @@
 
     <main id="retour-contenu">
         <section class="photographes">
-            <h1 role="heading" class="photographes-titre">Nos photographes</h1>
+            <h1 role="heading" class="photographes-titre" tabindex="0">Nos photographes</h1>
             <ul class="index"></ul>
         </section>
     </main>
